fix: toggle-box set position prop cause z-index

--- a/src/styles/components/elements/form-items/toggle-box.module.scss
+++ b/src/styles/components/elements/form-items/toggle-box.module.scss
@@ -1,5 +1,5 @@
 @use "$/mixins";
-$animationTime: 0.3s;
+$animationTime: 0.6s;
 
 .main {
   &[data-editable="true"] {
@@ -33,8 +33,6 @@ $animationTime: 0.3s;
 
 .box {
   box-sizing: border-box;
-  position: relative;
-  z-index: 0;
   transition: background-color #{$animationTime};
 
   &::before {
